feat(TT-35): updated to match rightmove bridge
